force-app/main/default/objects/nBRIDGER__OFAC_Disposition__c/nBRIDGER__OFAC_Disposition__c.object-meta.xml
<CustomObject>
    <label>OFAC_Disposition</label>
    <nameField>
        <label>OFAC_Disposition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC_Dispositions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>