force-app/main/default/objects/nBRIDGER__OFAC_Disposition__c/fields/nBRIDGER__OFAC_Match__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__OFAC_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OFAC_Match</label>
    <referenceTo>nBRIDGER__OFAC_Match__c</referenceTo>
    <relationshipLabel>OFAC_Dispositions</relationshipLabel>
    <relationshipName>OFAC_Dispositions</relationshipName>
    <type>Lookup</type>
</CustomField>