force-app/main/default/objects/nBRIDGER__OFAC_Disposition__c/fields/nBRIDGER__Request_Override__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Request_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the user has requested an override of this disposition.  Only applies if there is a &quot;Match&quot;.</description>
    <inlineHelpText>Request an override to this disposition.</inlineHelpText>
    <label>Request Override</label>
    <type>Checkbox</type>
</CustomField>