force-app/main/default/objects/nBRIDGER__OFAC_Disposition__c/fields/nBRIDGER__Status__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False Positive</fullName>
            </value>
            <value>
                <fullName>Match</fullName>
            </value>
            <value>
                <fullName>More Information Needed</fullName>
            </value>
            <value>
                <fullName>Match Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>